--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=easto.keystore
+MYAPP_RELEASE_KEY_ALIAS=isto
+MYAPP_RELEASE_STORE_PASSWORD=password
+MYAPP_RELEASE_KEY_PASSWORD=password
